# langgraph-sfm-trading-private

./: README.md  app.py  requirements.txt
hf-trading-space/: LICENSE  README.md  SPACE_SETUP.md  pyproject.toml
hf-trading-space/sfm/: bootstrap.py  dangerous_paths.yaml  data.csv  operational_causal_graph.yaml  schema_mapping.yaml
hf-trading-space/sfm/amantia/action_recommender/: recommender.py
hf-trading-space/sfm/amantia/causal_core/: __init__.py
hf-trading-space/sfm/amantia/contracts/: __init__.py  action_package.py
hf-trading-space/sfm/amantia/gate/: __init__.py
hf-trading-space/sfm/amantia/integrations/: __init__.py  (+1 more)
hf-trading-space/sfm/contracts/: causal_confidence.py  causal_contract.py  discovery_routing.py  gate_audit.py  output_layout.py  signal_safety_matrix.py
hf-trading-space/sfm/data/: action_event_panel.csv
hf-trading-space/sfm/estimation_parts/: _outputs.py  _trial_eval.py  _utils.py  contract_gate.py  effect_estimates.py  estimator_registry.py  matching.py  negative_controls.py  pearl_backdoor.py  placebo.py  sensitivity.py  stat_core.py
hf-trading-space/sfm/path_parts/: __init__.py  path_counterfactual.py  path_counterfactual_core.py
hf-trading-space/sfm/runtime/: action_intent.py  action_registry_v2.py  action_semantics.py  cf_types.py  mitigations.py  operational_graph.py  path_activation.py  path_counterfactual_core.py  runtime_calibration.py  safety_invariants.py
hf-trading-space/sfm/scm_parts/: __init__.py  _io.py  builder.py  do_backdoor.py  do_calculus.py  do_outputs.py  do_proof_engine.py  do_proof_verifier.py  graph_criteria.py  id_algorithm.py  id_algorithm_common.py  id_ast.py  id_authority.py  id_canonical_formula.py  id_completeness.py  id_decomposition.py  id_full_readiness.py  id_recursive.py  id_result.py  id_routes.py  idc_rules.py  identification_legacy.py  identifier.py  q_factor_numeric.py  scm_counterfactual.py  symbolic_evaluator.py
hf-trading-space/sfm_langgraph/: __init__.py  node.py
hf-trading-space/sfm_langgraph/trading/: __init__.py  advisor.py  alerts.py  autonomous_cli.py  binance_env.py  cli.py  graph.py  live_locked.py  policy.py  storage.py  strategy.py  strategy_planner.py
(+135 files in other folders)
